update version to 0.0.1